[package]
name = "cds"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = {version="4.0.32", features=["derive"]}
md5 = "0.7.0"
reqwest = {version = "0.11.6", features = ["blocking", "json"]}
select = "0.6.0"
lopdf = "0.29.0"

[dev-dependencies]
assert_cmd = "2"
predicates = "2.0.0"
tempfile = "3.2.0"